--- a/Mirko/Mirko.WindowsPhone/Controls/Entry.xaml
+++ b/Mirko/Mirko.WindowsPhone/Controls/Entry.xaml
@@ -15,6 +15,7 @@
     
     IsTapEnabled="True"
     IsDoubleTapEnabled="True"
+    IsHoldingEnabled="True"
     Tapped="UserControl_Tapped"
     DoubleTapped="UserControl_DoubleTapped"
     x:Name="Root">
