--- a/Mirko/Mirko.WindowsPhone/Pages/PivotPage.xaml
+++ b/Mirko/Mirko.WindowsPhone/Pages/PivotPage.xaml
@@ -130,8 +130,9 @@
                       Opacity="0.85"
                       HorizontalAlignment="Center"
                       VerticalAlignment="Center"
-                      SelectionMode="Single"
-                      SelectionChanged="TimeSpanSelectionListBox_SelectionChanged"
+                      SelectionMode="None"
+                      IsItemClickEnabled="True"
+                      ItemClick="TimeSpanSelectionListBox_ItemClick"
                       Loaded="TimeSpanSelectionListBox_Loaded"
                       SelectedIndex="{Binding HotTimeSpan, Converter={StaticResource HotTimeSpanIndexConverter}, Mode=TwoWay}"
                       ItemContainerStyle="{StaticResource ListViewItemStretchNoTilt}"
