--- a/Mirko.Universal/Pages/AttachmentPage.xaml
+++ b/Mirko.Universal/Pages/AttachmentPage.xaml
@@ -17,6 +17,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
         <!-- Title Panel -->
@@ -52,7 +53,7 @@
             <TextBox x:Name="URLTextBox"
                      Grid.Row="0"
                      PlaceholderText="link..."
-                     Text="{Binding NewEntry.Embed, Mode=TwoWay}"
+                     Text="{x:Bind VM.NewEntry.Embed, Mode=TwoWay}"
                      Style="{StaticResource TextBoxStyle1}"
                      InputScope="Url" />
 
@@ -63,7 +64,7 @@
                     
                     <i:Interaction.Behaviors>
                         <core:EventTriggerBehavior EventName="Tapped">
-                            <core:InvokeCommandAction Command="{Binding OpenPicker}" />
+                            <core:InvokeCommandAction Command="{x:Bind VM.OpenPicker}" />
                         </core:EventTriggerBehavior>
                     </i:Interaction.Behaviors>
 
@@ -71,5 +72,15 @@
             </StackPanel>
 
         </Grid>
+
+        <CommandBar Grid.Row="2">
+            
+            <AppBarButton Label="ok"
+                          Icon="Accept"
+                          Command="{x:Bind VM.AcceptAttachments}"
+                          x:Name="OKButton" />
+            
+        </CommandBar>
+        
     </Grid>
 </UserControl>
