--- a/Mirko.Universal/Pages/HashtagEntriesPage.xaml
+++ b/Mirko.Universal/Pages/HashtagEntriesPage.xaml
@@ -86,6 +86,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
         <!-- Title Panel -->
@@ -163,6 +164,28 @@
 
         </controls:ListViewEx>
 
+        <CommandBar Grid.Row="2"
+                    x:Name="AppBar">
+
+            <AppBarToggleButton Label="obserwuj"
+                                Click="Observe_Click"
+                                x:Name="ObserveButton">
+
+                <AppBarToggleButton.Icon>
+                    <BitmapIcon UriSource="/Assets/appbar.eye.png" />
+                </AppBarToggleButton.Icon>
+                
+            </AppBarToggleButton>
+
+            <AppBarButton Label="odśwież"
+                          Icon="Refresh"
+                          Command="{x:Bind VM.RefreshTaggedEntries}" />
+            
+            <AppBarButton Label="w górę"
+                          Icon="Up"
+                          Click="ScrollUp_Click" />
+            
+        </CommandBar>
 
     </Grid>
 </UserControl>
