--- a/Mirko.Universal/Pages/HashtagNotificationsPage.xaml
+++ b/Mirko.Universal/Pages/HashtagNotificationsPage.xaml
@@ -7,6 +7,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:utils="using:Mirko.Utils"
     xmlns:controls="using:Mirko.Controls"
+    xmlns:models="using:Mirko.ViewModel"
     mc:Ignorable="d"
     d:DesignHeight="300"
     d:DesignWidth="400"
@@ -17,6 +18,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
         <!-- Title Panel -->
@@ -26,19 +28,22 @@
 
         <Grid x:Name="ContentRoot" 
               Grid.Row="1">
+            
             <controls:EdgeTappedListView x:Name="ListView"
                                          IsItemClickEnabled="False"
+                                         IsItemLeftEdgeTapEnabled="True"
                                          ItemLeftEdgeTapped="ListView_ItemLeftEdgeTapped"
                                          SelectionChanged="ListView_SelectionChanged"
+                                         ItemContainerStyle="{StaticResource ListViewItemStretchNoTilt}"
                                          Loaded="ListView_Loaded"
-                                         ItemsSource="{Binding CurrentHashtagNotifications}">                
-                
+                                         ItemsSource="{x:Bind VM.CurrentHashtagNotifications, Mode=OneWay}">
+
                 <ListView.Header>
                     <Rectangle Fill="Transparent" />
                 </ListView.Header>
 
                 <ListView.ItemTemplate>
-                    <DataTemplate>
+                    <DataTemplate x:DataType="models:NotificationViewModel">
                         <Grid Margin="-10,0,0,0"
                               Background="Transparent"
                               Tapped="Grid_Tapped">
@@ -56,31 +61,31 @@
                                        Grid.Row="0"
                                        Margin="10,0,0,0"
                                        FontWeight="SemiBold"
-                                       FontSize="15"                                      
+                                       FontSize="12"                                      
                                        HorizontalAlignment="Left"
                                        VerticalAlignment="Center"
                                        TextTrimming="CharacterEllipsis"
-                                       Foreground="{Binding Data.AuthorGroup, Converter={StaticResource GroupToColor}}"
-                                       Text="{Binding Data.AuthorName}" />
+                                       Foreground="{x:Bind Data.AuthorGroup, Converter={StaticResource GroupToColor}}"
+                                       Text="{x:Bind Data.AuthorName}" />
 
                             <TextBlock Grid.Column="1"
                                        Grid.Row="0"
                                        Margin="10,0,0,0"
                                        Foreground="Gray"
-                                       FontSize="12"
+                                       FontSize="9.6"
                                        VerticalAlignment="Center"
                                        HorizontalAlignment="Left"
-                                       Text="{Binding Data.Date, Converter={StaticResource LongDateConverter}}"/>
+                                       Text="{x:Bind Data.Date, Converter={StaticResource LongDateConverter}}"/>
 
                             <RichTextBlock Grid.Column="0"
                                            Grid.ColumnSpan="2"
                                            Grid.Row="1"
                                            Margin="10,0,10,16"
-                                           FontSize="14"
+                                           FontSize="11.2"
                                            IsTextSelectionEnabled="False"
                                            MaxLines="1"
                                            TextTrimming="CharacterEllipsis"
-                                           utils:Injectors.HTML="{Binding Data.Entry.Text}"/>
+                                           utils:Injectors.HTML="{x:Bind Data.Entry.Text}"/>
 
                         </Grid>
                     </DataTemplate>
@@ -88,5 +93,21 @@
 
             </controls:EdgeTappedListView>
         </Grid>
+
+        <CommandBar Grid.Row="2"
+                    ClosedDisplayMode="Minimal"
+                    x:Name="AppBar">
+            <AppBarButton x:Name="DeleteSelectedButton"
+                          Label="usuń"
+                          Icon="Delete"
+                          IsEnabled="False"
+                          Click="DeleteSelectedButton_Click"/>
+
+            <CommandBar.SecondaryCommands>
+                <AppBarButton Label="usuń wszystkie"
+                              Command="{x:Bind VM.DeleteCurrentHashtagNotifications}"/>
+            </CommandBar.SecondaryCommands>
+        </CommandBar>
+        
     </Grid>
 </UserControl>
